--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
     </div>
     <!-- header Dnd -->
 
-
-
-
-
     <!-- main body start -->
     <div class="container my-md-5 my-2">
         <div class="row">
@@ -46,7 +42,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Addition</h5>
                         <p class="card-text"> There will have two values. They will be addition by clicking. </p>
-                        <a href="projects/addition.html" class="btn bg-100-js-project bg-100-js-project-hover">Project Details</a>
+                        <a href="projects/addition.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a>
                     </div>
                 </div>
             </div>
@@ -54,11 +51,6 @@
     </div>
     <!-- main body end -->
 
-
-
-
-
-    
     <!-- footer Start -->
     <div class="container-fluid bg-100-js-project py-md-3 py-1">
         <div class="container">
@@ -66,8 +58,10 @@
                 <div class="col">
                     <div class="social-media-links">
                         <ul>
-                            <li> <a href="https://facebook.com/faroque.computer" target="_blank" class="text-dark"> Facebook </a> </li>
-                            <li> <a href="https://www.youtube.com/@faroque001" target="_blank" class="text-dark"> Youtube </a> </li>
+                            <li> <a href="https://facebook.com/faroque.computer" target="_blank" class="text-dark">
+                                    Facebook </a> </li>
+                            <li> <a href="https://www.youtube.com/@faroque001" target="_blank" class="text-dark">
+                                    Youtube </a> </li>
                         </ul>
                     </div>
                 </div>
@@ -80,21 +74,15 @@
     </div>
     <!-- footer End -->
 
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 
-    <script src="assests/js/index.js"></script>
+    <script>
+        let d = new Date();
+        fullYear = d.getFullYear();
+        document.getElementById("getYear").innerHTML = fullYear;
+    </script>
 </body>
 
 </html>
