fixed home page

--- a/projects/addition/addition-live-demo.html
+++ b/projects/addition/addition-live-demo.html
@@ -17,13 +17,13 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col">
-                    <a href="http://127.0.0.1:28750/index.html"> <img src="../../assests/images/main-logo.png"
+                    <a href="../../index.html"> <img src="../../assests/images/main-logo.png"
                             alt="main-menu"> </a>
                 </div>
                 <div class="col">
                     <div class="main-menu-100">
                         <ul>
-                            <li> <a href="../index.html"> Home </a> </li>
+                            <li> <a href="../../index.html"> Home </a> </li>
                             <li> <a href="index.html"> About US </a> </li>
                             <li> <a href="index.html"> All Projects </a> </li>
                         </ul>
