--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://picsum.photos/id/8/285/180" class="card-img-top" alt="...">
+                    <img src="projects/addition/addition-live-demo.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Addition</h5>
                         <p class="card-text"> There will have two values. They will be addition by clicking. </p>
-                        <a href="projects/addition.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                        <a href="projects/addition/addition.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
                             Details</a>
                     </div>
                 </div>
