--- a/projects/1-addition/addition-live-demo.html
+++ b/projects/1-addition/addition-live-demo.html
@@ -7,7 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style.css">
 </head>
 
 <body>
@@ -17,12 +17,13 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col">
-                    <a href="index.html"> <img src="assests/images/main-logo.png" alt="main-menu"> </a>
+                    <a href="../../index.html"> <img src="../../assests/images/main-logo.png"
+                            alt="main-menu"> </a>
                 </div>
                 <div class="col">
                     <div class="main-menu-100">
                         <ul>
-                            <li> <a href="index.html"> Home </a> </li>
+                            <li> <a href="../../index.html"> Home </a> </li>
                             <li> <a href="index.html"> About US </a> </li>
                             <li> <a href="index.html"> All Projects </a> </li>
                         </ul>
@@ -31,41 +32,34 @@
             </div>
         </div>
     </div>
-    <!-- header Dnd -->
+    <!-- header end -->
 
     <!-- main body start -->
     <div class="container my-md-5 my-2">
         <div class="row">
-            
-            <!-- Per Project Start -->
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="projects/1-addition/addition-live-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
-                    <div class="card-body">
-                        <h5 class="card-title">Addition</h5> <!--changable-->
-                        <p class="card-text"> There will have two values. They will be addition by clicking. </p> <!--changable-->
-                        <a href="projects/1-addition/addition.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
-                            Details</a> <!--changable-->
-                    </div>
+            <div class="col-6 border mx-auto p-md-5 p-3 rounded shadow">
+
+                <h2> Addition </h2>
+                <p> Enter the two values to add. </p>
+
+                <div class="mb-md-4 mb-3">
+                    <label for="ValueOne" class="mb-md-2 mb-1"> Value One </label>
+                    <input type="number" name="ValueOne" id="value-one" class="form-control">
                 </div>
-            </div>
-            <!-- Per Project End -->
 
-            <!-- Per Project Start -->
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="projects/2-subtraction/subtract-live-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
-                    <div class="card-body">
-                        <h5 class="card-title">Subtraction</h5> <!--changable-->
-                        <p class="card-text"> There will have two values. They will be subtract by clicking. </p> <!--changable-->
-                        <a href="projects/2-subtraction/subtraction.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
-                            Details</a> <!--changable-->
-                    </div>
+                <div class="mb-md-4 mb-3">
+                    <label for="value-two" class="mb-md-2 mb-1"> Value Two </label>
+                    <input type="number" name="value-two" id="value-two" class="form-control">
                 </div>
+
+                <div class="mb-md-4 mb-3">
+                    <label for="get-result-button" class="mb-md-2 mb-1"> </label>
+                    <button name="get-result-button" id="get-result-button"
+                        class="btn bg-100-js-project bg-100-js-project-hover"> Submit </button>
+                </div>
+                <h4 class="mb-0"> Total : <span id="show-addition-result"></span> </h4>
+
             </div>
-            <!-- Per Project End -->
-
-
         </div>
     </div>
     <!-- main body end -->
@@ -97,6 +91,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 
+    <script src="index.js"></script>
     <script>
         let d = new Date();
         fullYear = d.getFullYear();
