--- a/projects/2-subtraction/subtraction-live-demo.html
+++ b/projects/2-subtraction/subtraction-live-demo.html
@@ -34,26 +34,13 @@
     </div>
     <!-- header end -->
 
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- main body start -->
-
     <div class="container my-md-5 my-2">
         <div class="row">
             <div class="col-6 border mx-auto p-md-5 p-3 rounded shadow">
 
-                <h2> Addition </h2>
-                <p> Enter the two values to add. </p>
+                <h2> Subtraction </h2>
+                <p> Enter the two values to subtract (minus). </p>
 
                 <div class="mb-md-4 mb-3">
                     <label for="ValueOne" class="mb-md-2 mb-1"> Value One </label>
@@ -76,28 +63,6 @@
         </div>
     </div>
     <!-- main body end -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- footer Start -->
     <div class="container-fluid bg-100-js-project py-md-3 py-1">
