--- a/projects/2-subtraction/subtraction.html
+++ b/projects/2-subtraction/subtraction.html
@@ -7,7 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style.css">
 </head>
 
 <body>
@@ -17,12 +17,13 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col">
-                    <a href="index.html"> <img src="assests/images/main-logo.png" alt="main-menu"> </a>
+                    <a href="../../index.html"> <img src="/assests/images/main-logo.png"
+                            alt="main-menu"> </a>
                 </div>
                 <div class="col">
                     <div class="main-menu-100">
                         <ul>
-                            <li> <a href="index.html"> Home </a> </li>
+                            <li> <a href="../../index.html"> Home </a> </li>
                             <li> <a href="index.html"> About US </a> </li>
                             <li> <a href="index.html"> All Projects </a> </li>
                         </ul>
@@ -31,44 +32,66 @@
             </div>
         </div>
     </div>
-    <!-- header Dnd -->
+    <!-- header end -->
+
+
+
 
     <!-- main body start -->
+
     <div class="container my-md-5 my-2">
         <div class="row">
-            
-            <!-- Per Project Start -->
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="projects/1-addition/addition-live-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
-                    <div class="card-body">
-                        <h5 class="card-title">Addition</h5> <!--changable-->
-                        <p class="card-text"> There will have two values. They will be addition by clicking. </p> <!--changable-->
-                        <a href="projects/1-addition/addition.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
-                            Details</a> <!--changable-->
-                    </div>
-                </div>
+            <div class="col-12">
+                <h2 class="mb-md-4 mb-2"> Subtraction within Two Values - HTML, CSS, JavaScript </h2>
+                <img src="/projects/2-subtraction/subtract-live-demo.jpg" alt="Project Screenshot"
+                    class="img-fluid mb-md-4 mb-2 mx-auto d-block">
+
+                <h4> Project Descript </h4>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, ut. Debitis ex natus repellat eius
+                    molestias! Autem nesciunt molestias amet necessitatibus, esse hic dolorem impedit? </p>
+
+                <h4> Addition Project Live Demo (Preview) </h4>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover mb-md-4 mb-2"> <a
+                        href="/projects/2-subtraction/subtraction-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
+                <h4> Addition Project Source Code (Github) </h4>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> 
+                    
+                    <!--changable-->
+                    <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/addition" class="text-decoration-none text-dark"> 
+                        Source Code 
+                    </a> </button>
             </div>
-            <!-- Per Project End -->
-
-            <!-- Per Project Start -->
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="projects/2-subtraction/subtract-live-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
-                    <div class="card-body">
-                        <h5 class="card-title">Subtraction</h5> <!--changable-->
-                        <p class="card-text"> There will have two values. They will be subtract by clicking. </p> <!--changable-->
-                        <a href="projects/2-subtraction/subtraction.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
-                            Details</a> <!--changable-->
-                    </div>
-                </div>
-            </div>
-            <!-- Per Project End -->
-
-
         </div>
     </div>
     <!-- main body end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- footer Start -->
     <div class="container-fluid bg-100-js-project py-md-3 py-1">
@@ -97,11 +120,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 
-    <script>
-        let d = new Date();
-        fullYear = d.getFullYear();
-        document.getElementById("getYear").innerHTML = fullYear;
-    </script>
+    <script src="assests/js/index.js"></script>
 </body>
 
 </html>
