fixing image location

--- a/projects/2-subtraction/subtraction.html
+++ b/projects/2-subtraction/subtraction.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col">
-                    <a href="../../index.html"> <img src="/assests/images/main-logo.png"
+                    <a href="../../index.html"> <img src="../../assests/images/main-logo.png"
                             alt="main-menu"> </a>
                 </div>
                 <div class="col">
