--- a/projects/1-addition/addition.html
+++ b/projects/1-addition/addition.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-12">
                 <h2 class="mb-md-4 mb-2"> Addition within Two Values - HTML, CSS, JavaScript </h2>
-                <img src="projects/1-addition/addition-live-demo.jpg" alt="Project Screenshot"
+                <img src="addition-live-demo.jpg" alt="Project Screenshot"
                     class="img-fluid mb-md-4 mb-2 mx-auto d-block">
 
 
@@ -49,7 +49,7 @@
 
                 <h4> Addition Project Live Demo (Preview) </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover mb-md-4 mb-2"> <a
-                        href="projects/1-addition/addition-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
+                        href="addition-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
                 <h4> Addition Project Source Code (Github) </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/addition" class="text-decoration-none text-dark"> Source Code </a> </button>
             </div>
