--- a/projects/2-subtraction/subtraction.html
+++ b/projects/2-subtraction/subtraction.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-12">
                 <h2 class="mb-md-4 mb-2"> Subtraction within Two Values - HTML, CSS, JavaScript </h2>
-                <img src="/projects/2-subtraction/subtract-live-demo.jpg" alt="Project Screenshot"
+                <img src="subtract-live-demo.jpg" alt="Project Screenshot"
                     class="img-fluid mb-md-4 mb-2 mx-auto d-block">
 
                 <h4> Project Descript </h4>
@@ -52,7 +52,7 @@
 
                 <h4> Addition Project Live Demo (Preview) </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover mb-md-4 mb-2"> <a
-                        href="/projects/2-subtraction/subtraction-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
+                        href="subtraction-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
                 <h4> Addition Project Source Code (Github) </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> 
                     
