multiplication and division

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <div class="main-menu-100">
                         <ul>
                             <li> <a href="index.html"> Home </a> </li>
-                            <li> <a href="index.html"> About US </a> </li>
-                            <li> <a href="index.html"> All Projects </a> </li>
+                            <li> <a href="about-us.html"> About US </a> </li>
+                            <li> <a href="all-projects"> All Projects </a> </li>
                         </ul>
                     </div>
                 </div>
@@ -59,6 +59,34 @@
                         <h5 class="card-title">Subtraction</h5> <!--changable-->
                         <p class="card-text"> There will have two values. They will be subtract by clicking. </p> <!--changable-->
                         <a href="projects/2-subtraction/subtraction.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a> <!--changable-->
+                    </div>
+                </div>
+            </div>
+            <!-- Per Project End -->
+
+            <!-- Per Project Start -->
+            <div class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/3-multiplication/multiplication-live-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
+                    <div class="card-body">
+                        <h5 class="card-title">Multiplication</h5> <!--changable-->
+                        <p class="card-text"> There will have two values. They will be multiply by clicking. </p> <!--changable-->
+                        <a href="projects/3-multiplication/multiplication.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a> <!--changable-->
+                    </div>
+                </div>
+            </div>
+            <!-- Per Project End -->
+
+            <!-- Per Project Start -->
+            <div class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/4-division/division-live-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
+                    <div class="card-body">
+                        <h5 class="card-title">Division</h5> <!--changable-->
+                        <p class="card-text"> There will have two values. First value will be divided by second value by clicking. </p> <!--changable-->
+                        <a href="projects/4-division/division-live-demo.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
                             Details</a> <!--changable-->
                     </div>
                 </div>
