--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
                 </div>
             </div>
             <!-- Per Project End -->
+            
+            <!-- Per Project Start -->
+            <div class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/4-division/division-live-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
+                    <div class="card-body">
+                        <h5 class="card-title"> Modulus </h5> <!--changable-->
+                        <p class="card-text"> Rest of division value. </p> <!--changable-->
+                        <a href="projects/5-modulus/modulus.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a> <!--changable-->
+                    </div>
+                </div>
+            </div>
+            <!-- Per Project End -->
 
 
         </div>
