--- a/projects/5-modulus/modulus-live-demo.html
+++ b/projects/5-modulus/modulus-live-demo.html
@@ -39,8 +39,8 @@
         <div class="row">
             <div class="col-6 border mx-auto p-md-5 p-3 rounded shadow">
 
-                <h2> modulus </h2>
-                <p> Enter the two values to divide (modulus). </p>
+                <h2> Modulus </h2>
+                <p> Rest of the division </p>
 
                 <div class="mb-md-4 mb-3">
                     <label for="ValueOne" class="mb-md-2 mb-1"> Value One </label>
