--- a/projects/5-modulus/modulus.html
+++ b/projects/5-modulus/modulus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title> 100 JS Basic Projects </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../../style.css">
@@ -24,8 +24,8 @@
                     <div class="main-menu-100">
                         <ul>
                             <li> <a href="../../index.html"> Home </a> </li>
-                            <li> <a href="index.html"> About US </a> </li>
-                            <li> <a href="index.html"> All Projects </a> </li>
+                            <li> <a href="about-us.html"> About US </a> </li>
+                            <li> <a href="all-projects.html"> All Projects </a> </li>
                         </ul>
                     </div>
                 </div>
@@ -34,35 +34,64 @@
     </div>
     <!-- header end -->
 
+
+
+
     <!-- main body start -->
+
     <div class="container my-md-5 my-2">
         <div class="row">
-            <div class="col-6 border mx-auto p-md-5 p-3 rounded shadow">
+            <div class="col-12">
+                <h2 class="mb-md-4 mb-2"> Modulus - HTML, CSS, JavaScript </h2>
+                <img src="modulus-live-demo.jpg" alt="Project Screenshot"
+                    class="img-fluid mb-md-4 mb-2 mx-auto d-block">
 
-                <h2> modulus </h2>
-                <p> Enter the two values to divide (modulus). </p>
+                <h4> Project Description </h4>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, ut. Debitis ex natus repellat eius
+                    molestias! Autem nesciunt molestias amet necessitatibus, esse hic dolorem impedit? </p>
 
-                <div class="mb-md-4 mb-3">
-                    <label for="ValueOne" class="mb-md-2 mb-1"> Value One </label>
-                    <input type="number" name="ValueOne" id="value-one" class="form-control">
-                </div>
-
-                <div class="mb-md-4 mb-3">
-                    <label for="value-two" class="mb-md-2 mb-1"> Value Two </label>
-                    <input type="number" name="value-two" id="value-two" class="form-control">
-                </div>
-
-                <div class="mb-md-4 mb-3">
-                    <label for="get-result-button" class="mb-md-2 mb-1"> </label>
-                    <button name="get-result-button" id="get-result-button"
-                        class="btn bg-100-js-project bg-100-js-project-hover"> Submit </button>
-                </div>
-                <h4 class="mb-0"> Total : <span id="show-addition-result"></span> </h4>
-
+                <h4> Modulus Project Live Demo (Preview) </h4>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover mb-md-4 mb-2"> <a
+                        href="modulus-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
+                <h4> Modulus Project Source Code (Github) </h4>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> 
+                    
+                    <!--changable-->
+                    <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/5-modulus" class="text-decoration-none text-dark"> 
+                        Source Code 
+                    </a> </button>
             </div>
         </div>
     </div>
     <!-- main body end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- footer Start -->
     <div class="container-fluid bg-100-js-project py-md-3 py-1">
@@ -91,12 +120,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 
-    <script src="index.js"></script>
-    <script>
-        let d = new Date();
-        fullYear = d.getFullYear();
-        document.getElementById("getYear").innerHTML = fullYear;
-    </script>
+    <script src="assests/js/index.js"></script>
 </body>
 
 </html>
