--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
             </div>
             <!-- Per Project End -->
             
-            
             <!-- Per Project Start -->
             <div class="col-md-3">
                 <div class="card" style="width: 18rem;">
@@ -121,6 +120,20 @@
                 </div>
             </div>
             <!-- Per Project End -->
+
+            <!-- Image generator Project Start -->
+            <div class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/7-image-generator/image-generator.jpg" class="card-img-top" alt="..."> <!--changable-->
+                    <div class="card-body">
+                        <h5 class="card-title"> Image Generator </h5> <!--changable-->
+                        <p class="card-text"> Image generator javascript project </p> <!--changable-->
+                        <a href="projects/7-image-generator/image-generator.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a> <!--changable-->
+                    </div>
+                </div>
+            </div>
+            <!-- Image generator Project End -->
 
 
         </div>
