with youtube video and github link project No. 7

--- a/projects/7-image-generator/image-generator.html
+++ b/projects/7-image-generator/image-generator.html
@@ -56,13 +56,14 @@
 
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover">
                 <!--changable-->
-                <a href="" class="text-decoration-none text-dark"> Source Code </a> </button>
+                <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/7-image-generator" class="text-decoration-none text-dark"> Source Code </a> </button>
+
+
+                <h4> Video Tutorial </h4>
 
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover">
                 <!--changable-->
-                <a href="" class="text-decoration-none text-dark"> Tutorial </a> </button>
-
-
+                <a href="https://youtu.be/C408Y8Vau94" class="text-decoration-none text-dark" target="_blank"> Tutorial </a> </button>
             </div>
         </div>
     </div>
