--- a/projects/7-image-generator/image-generator.html
+++ b/projects/7-image-generator/image-generator.html
@@ -58,9 +58,8 @@
                 <!--changable-->
                 <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/7-image-generator" class="text-decoration-none text-dark"> Source Code </a> </button>
 
-
-                <h4> Video Tutorial </h4>
-
+               <!-- Tutorial -->
+                <h4 class="mt-md-4 mt-2"> Video Tutorial </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover">
                 <!--changable-->
                 <a href="https://youtu.be/C408Y8Vau94" class="text-decoration-none text-dark" target="_blank"> Tutorial </a> </button>
