count time by javascript with youtube video link

--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
             </div>
             <!-- Image generator Project End -->
 
+            <!-- Image generator Project Start -->
+            <div class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/8-reading-time/assests/images/readimg-time-count.png" class="card-img-top" alt="..."> <!--changable-->
+                    <div class="card-body">
+                        <h5 class="card-title"> Reading Time Count </h5> <!--changable-->
+                        <p class="card-text"> Reading Time Count javascript project </p> <!--changable-->
+                        <a href="projects/8-reading-time/reading-time.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a> <!--changable-->
+                    </div>
+                </div>
+            </div>
+            <!-- Image generator Project End -->
+
 
         </div>
     </div>
