--- a/projects/8-reading-time/reading-time.html
+++ b/projects/8-reading-time/reading-time.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-12">
                 <h2 class="mb-md-4 mb-2"> Reading time count- HTML, CSS, JavaScript </h2>
-                <img src="image-generator.jpg" alt="Project Screenshot" class="img-fluid mb-md-4 mb-2 mx-auto d-block">
+                <img src="assests/images/readimg-time-count.png" alt="Project Screenshot" class="img-fluid mb-md-4 mb-2 mx-auto d-block">
 
                 <h4> Project Description </h4>
                 <p> How much time do you need to read an article, it will be counted by JavaScript. </p>
@@ -55,13 +55,13 @@
 
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover">
                 <!--changable-->
-                <a href="" class="text-decoration-none text-dark"> Source Code </a> </button>
+                <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/8-reading-time" class="text-decoration-none text-dark"> Source Code </a> </button>
 
                <!-- Tutorial -->
                 <h4 class="mt-md-4 mt-2"> Video Tutorial </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover">
                 <!--changable-->
-                <a href="" class="text-decoration-none text-dark" target="_blank"> Tutorial </a> </button>
+                <a href="https://youtu.be/9huDLEj7ISA" class="text-decoration-none text-dark" target="_blank"> Tutorial </a> </button>
             </div>
         </div>
     </div>
