--- a/projects/9-javascript-clock/javascript-clock.html
+++ b/projects/9-javascript-clock/javascript-clock.html
@@ -56,7 +56,7 @@
                         href="javascript-clock-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
 
                 <h4> Addition Project Source Code (Github) </h4>
-                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="" class="text-decoration-none text-dark"> Source Code </a> </button>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/9-javascript-clock" class="text-decoration-none text-dark"> Source Code </a> </button>
 
                 <br>
                 <br>
