default time deelted

--- a/projects/9-javascript-clock/javascript-clock-live-demo.html
+++ b/projects/9-javascript-clock/javascript-clock-live-demo.html
@@ -44,10 +44,10 @@
           <h1 class="text-center">Javasscript Clock</h1>
           <div class="vh-100 align-items-center d-flex justify-content-center">
             <div class="d-flex">
-              <h1 class="digit-design" id="hour">02</h1>
-              <h1 class="digit-design" id="minute">15</h1>
-              <h1 class="digit-design" id="seconds">28</h1>
-              <h1 class="digit-design" id="session">PM</h1>
+              <h1 class="digit-design" id="hour"></h1>
+              <h1 class="digit-design" id="minute"></h1>
+              <h1 class="digit-design" id="seconds"></h1>
+              <h1 class="digit-design" id="session"></h1>
             </div>
           </div>
         </div>
