--- a/projects/4-division/division-live-demo.html
+++ b/projects/4-division/division-live-demo.html
@@ -24,8 +24,8 @@
                     <div class="main-menu-100">
                         <ul>
                             <li> <a href="../../index.html"> Home </a> </li>
-                            <li> <a href="index.html"> About US </a> </li>
-                            <li> <a href="index.html"> All Projects </a> </li>
+                            <li> <a href="about-us.html"> About US </a> </li>
+                            <li> <a href="../../index.html"> All Projects </a> </li>
                         </ul>
                     </div>
                 </div>
