--- a/projects/5-modulus/modulus-live-demo.html
+++ b/projects/5-modulus/modulus-live-demo.html
@@ -25,7 +25,7 @@
                         <ul>
                             <li> <a href="../../index.html"> Home </a> </li>
                             <li> <a href="index.html"> About US </a> </li>
-                            <li> <a href="index.html"> All Projects </a> </li>
+                            <li> <a href="../../index.html"> All Projects </a> </li>
                         </ul>
                     </div>
                 </div>
