--- a/projects/6-multiple-add/multiple-add.html
+++ b/projects/6-multiple-add/multiple-add.html
@@ -25,7 +25,7 @@
                         <ul>
                             <li> <a href="../../index.html"> Home </a> </li>
                             <li> <a href="about-us.html"> About US </a> </li>
-                            <li> <a href="all-projects.html"> All Projects </a> </li>
+                            <li> <a href="../../index.html"> All Projects </a> </li>
                         </ul>
                     </div>
                 </div>
