english to bangla digit replace

--- a/projects/9-javascript-clock/javascript-clock-live-demo.html
+++ b/projects/9-javascript-clock/javascript-clock-live-demo.html
@@ -43,11 +43,11 @@
         <div class="row">
           <h1 class="text-center">Javasscript Clock</h1>
           <div class="vh-100 align-items-center d-flex justify-content-center">
-            <div class="d-flex">
-              <h1 class="digit-design" id="hour"></h1>
-              <h1 class="digit-design" id="minute"></h1>
-              <h1 class="digit-design" id="seconds"></h1>
-              <h1 class="digit-design" id="session"></h1>
+            <div class="d-flex" id="bangla-digits-show">
+              <h1 class="digit-design" id="hour">00</h1>
+              <h1 class="digit-design" id="minute">00</h1>
+              <h1 class="digit-design" id="seconds">00</h1>
+              <h1 class="digit-design" id="session">00</h1>
             </div>
           </div>
         </div>
