--- a/projects/9-javascript-clock/javascript-clock.html
+++ b/projects/9-javascript-clock/javascript-clock.html
@@ -62,7 +62,7 @@
                 <br>
 
                 <h4> How I have made it. </h4>
-                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://youtu.be/ZYfw8LznkCo" target="_blank" class="text-decoration-none text-dark"> Video Tutorial </a> </button>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://youtu.be/q5b2-UWskIc" target="_blank" class="text-decoration-none text-dark"> Video Tutorial </a> </button>
             </div>
         </div>
     </div>
