10-odd-even-checker done

--- a/index.html
+++ b/index.html
@@ -165,6 +165,22 @@
             <!-- JavaScript Clock Start End -->
 
 
+
+            <!-- 9 No. Project JavaScript Clock Start -->
+            <div class="col-md-3 mb-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/10-odd-even-checker/odd-even-checker-demo.jpg" class="card-img-top" alt="..."> <!--changable-->
+                    <div class="card-body">
+                        <h5 class="card-title"> Odd Even Checker </h5> <!--changable-->
+                        <p class="card-text"> JavaScript Odd Even Checker Project </p> <!--changable-->
+                        <a href="projects/10-odd-even-checker/odd-even-checker.html" class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a> <!--changable-->
+                    </div>
+                </div>
+            </div>
+            <!-- JavaScript Clock Start End -->
+
+
         </div>
     </div>
     <!-- main body end -->
