--- a/projects/10-odd-even-checker/odd-even-checker.html
+++ b/projects/10-odd-even-checker/odd-even-checker.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-12">
                 <h2 class="mb-md-4 mb-2"> Odd Even Checker in JavaScript - HTML, CSS, JavaScript </h2>
-                <img src="javascript-clock-live-demo.jpg" alt="Project Screenshot"
+                <img src="odd-even-checker-demo.jpg" alt="Project Screenshot"
                     class="img-fluid mb-md-4 mb-2 mx-auto d-block">
 
 
@@ -56,13 +56,13 @@
                         href="odd-even-checker-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
 
                 <h4> Addition Project Source Code (Github) </h4>
-                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="#" class="text-decoration-none text-dark"> Source Code </a> </button>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/10-odd-even-checker" class="text-decoration-none text-dark"> Source Code </a> </button>
 
                 <br>
                 <br>
 
                 <h4> How I have made it. </h4>
-                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="#" target="_blank" class="text-decoration-none text-dark"> Video Tutorial </a> </button>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://youtu.be/aMxFZlPv3SE" target="_blank" class="text-decoration-none text-dark"> Video Tutorial </a> </button>
             </div>
         </div>
     </div>
