up to Tangail's upazila

--- a/projects/11-division-district-upazila-union/division-district-upazila-union-live-demo.html
+++ b/projects/11-division-district-upazila-union/division-district-upazila-union-live-demo.html
@@ -83,12 +83,13 @@
             </select>
           </div>
 
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <h2> Union </h2>
             <select id="union" class="form-select" aria-label="Default select example">
               <option value=""> -- Select Union -- </option>
             </select>
-          </div>
+          </div> -->
+
         </div>
       </form>
     </div>
