--- a/projects/11-division-district-upazila-union/division-district-upazila-union.html
+++ b/projects/11-division-district-upazila-union/division-district-upazila-union.html
@@ -42,8 +42,8 @@
     <div class="container my-md-5 my-2">
         <div class="row">
             <div class="col-12">
-                <h2 class="mb-md-4 mb-2"> Odd Even Checker in JavaScript - HTML, CSS, JavaScript </h2>
-                <img src="odd-even-checker-demo.jpg" alt="Project Screenshot"
+                <h2 class="mb-md-4 mb-2"> Division, District and Upazila </h2>
+                <img src="division-district-upazila.jpg" alt="Project Screenshot"
                     class="img-fluid mb-md-4 mb-2 mx-auto d-block">
 
 
@@ -53,16 +53,22 @@
 
                 <h4> Javascript Clock Live Demo (Preview) </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover mb-md-4 mb-2"> <a
-                        href="division-district-upazila-union-live-demo.html" class="text-decoration-none text-dark"> Live Demo </a> </button>
+                        href="division-district-upazila-union-live-demo.html" class="text-decoration-none text-dark">
+                        Live Demo </a> </button>
+
 
                 <h4> Addition Project Source Code (Github) </h4>
-                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/10-odd-even-checker" class="text-decoration-none text-dark"> Source Code </a> </button>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover">
+                    <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/11-division-district-upazila-union"
+                        class="text-decoration-none text-dark"> Source Code </a> </button>
 
                 <br>
                 <br>
 
                 <h4> How I have made it. </h4>
-                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a href="https://youtu.be/aMxFZlPv3SE" target="_blank" class="text-decoration-none text-dark"> Video Tutorial </a> </button>
+                <button type="button" class="btn bg-100-js-project bg-100-js-project-hover"> <a
+                        href="#" target="_blank" class="text-decoration-none text-dark">
+                        Video Tutorial </a> </button>
             </div>
         </div>
     </div>
@@ -98,7 +104,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+        </script>
 
     <script src="assests/js/index.js"></script>
 </body>
