deleted union from the title

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                     <img src="projects/11-division-district-upazila-union/division-district-upazila.jpg" class="card-img-top" alt="...">
                     <!--changable-->
                     <div class="card-body">
-                        <h5 class="card-title"> Division District Upazila Union </h5> <!--changable-->
-                        <p class="card-text"> Division District Upazila Union Project </p> <!--changable-->
+                        <h5 class="card-title"> Division District Upazila </h5> <!--changable-->
+                        <p class="card-text"> Division District Upazila Project </p> <!--changable-->
                         <a href="projects/11-division-district-upazila-union/division-district-upazila-union.html"
                             class="btn bg-100-js-project bg-100-js-project-hover">Project
                             Details</a> <!--changable-->
