--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
             </div>
             <!-- Reading Time Count End -->
 
-
             <!-- 9 No. Project JavaScript Clock Start -->
             <div class="col-md-3 mb-4">
                 <div class="card" style="width: 18rem;">
@@ -186,9 +185,7 @@
             </div>
             <!-- JavaScript Clock Start End -->
 
-
-
-            <!-- 9 No. Project JavaScript Clock Start -->
+            <!-- 10 No. Project JavaScript Clock Start -->
             <div class="col-md-3 mb-4">
                 <div class="card" style="width: 18rem;">
                     <img src="projects/10-odd-even-checker/odd-even-checker-demo.jpg" class="card-img-top" alt="...">
@@ -204,7 +201,7 @@
             </div>
             <!-- JavaScript Clock Start End -->
 
-            <!-- 9 No. Project JavaScript Clock Start -->
+            <!-- 11 No. Project JavaScript Clock Start -->
             <div class="col-md-3 mb-4">
                 <div class="card" style="width: 18rem;">
                     <img src="projects/11-division-district-upazila-union/division-district-upazila.jpg" class="card-img-top" alt="...">
@@ -219,6 +216,22 @@
                 </div>
             </div>
             <!-- JavaScript Clock Start End -->
+
+            <!-- 12 No. Project JavaScript Accordin Start -->
+            <div class="col-md-3 mb-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="projects/12-accordion/accordion.jpg" class="card-img-top" alt="...">
+                    <!--changable-->
+                    <div class="card-body">
+                        <h5 class="card-title"> Division District Upazila </h5> <!--changable-->
+                        <p class="card-text"> Division District Upazila Project </p> <!--changable-->
+                        <a href="projects/12-accordion/accordion.html"
+                            class="btn bg-100-js-project bg-100-js-project-hover">Project
+                            Details</a> <!--changable-->
+                    </div>
+                </div>
+            </div>
+            <!-- JavaScript Clock Accordin End -->
 
 
         </div>
