--- a/projects/13-count-letter-word-sentence-paragraph/13-count-letter-word-sentence-paragraph.html
+++ b/projects/13-count-letter-word-sentence-paragraph/13-count-letter-word-sentence-paragraph.html
@@ -42,8 +42,8 @@
     <div class="container my-md-5 my-2">
         <div class="row">
             <div class="col-12">
-                <h2 class="mb-md-4 mb-2"> Accordion </h2>
-                <img src="accordion.jpg" alt="Project Screenshot"
+                <h2 class="mb-md-4 mb-2"> Count </h2>
+                <img src="count.jpg" alt="Project Screenshot"
                     class="img-fluid mb-md-4 mb-2 mx-auto d-block">
 
 
@@ -51,15 +51,15 @@
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, ut. Debitis ex natus repellat eius
                     molestias! Autem nesciunt molestias amet necessitatibus, esse hic dolorem impedit? </p>
 
-                <h4> Javascript Accordion Live Demo (Preview) </h4>
+                <h4> Javascript Count Live Demo (Preview) </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover mb-md-4 mb-2"> <a
-                        href="accordion-live-demo.html" class="text-decoration-none text-dark">
+                        href="13-count-letter-word-sentence-paragraph-live-demo.html" class="text-decoration-none text-dark">
                         Live Demo </a> </button>
 
 
                 <h4> Addition Project Source Code (Github) </h4>
                 <button type="button" class="btn bg-100-js-project bg-100-js-project-hover">
-                    <a href="https://github.com/safaroque7/100-js-project/blob/main/projects/12-accordion/assets/js/index.js"
+                    <a href="https://github.com/safaroque7/100-js-project/tree/main/projects/13-count-letter-word-sentence-paragraph"
                         class="text-decoration-none text-dark"> Source Code </a> </button>
 
                 <br>
