--- a/index.html
+++ b/index.html
@@ -233,15 +233,15 @@
             </div>
             <!-- JavaScript Clock Accordin End -->
              
-            <!-- 12 No. Project JavaScript Accordin Start -->
+            <!-- 13 No. Project JavaScript Count -->
             <div class="col-md-3 mb-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://picsum.photos/704/509" class="card-img-top" alt="...">
+                    <img src="projects/13-count-letter-word-sentence-paragraph/count.jpg" class="card-img-top" alt="...">
                     <!--changable-->
                     <div class="card-body">
                         <h5 class="card-title"> Count: Letter, Word, Sentence, Paragraph </h5> <!--changable-->
                         <p class="card-text"> Count: Letter, Word, Sentence, Paragraph Project </p> <!--changable-->
-                        <a href="projects/13-count-letter-word-sentence-paragraph/13-count-letter-word-sentence-paragraph-live-demo.html"
+                        <a href="projects/13-count-letter-word-sentence-paragraph/13-count-letter-word-sentence-paragraph.html"
                             class="btn bg-100-js-project bg-100-js-project-hover">Project
                             Details</a> <!--changable-->
                     </div>
